--------------------------------------------------------------------------------------
Scheduled Release 8.2602.0 (aka 2026.02) 2026-02-17
- NEW DEPENDENCES: names vary by distribution
  - libyaml-dev
  - libprotobuf-c-dev   (module dependency)
  - libsnappy-dev       (module dependency)
  - protobuf-c-compiler (build dependency)
- DEFAULT CHANGE: internal ratelimiter now by default set to
  500 messages/5s vs previous default of 100 messages/60s. This
  is to prevent spamming the log to much in extreme cases. For some
  users, this may be too low and need to be adjusted. We excect this
  to be an exotic case, thus the change of default.
- NEW DOC generation now via autotools integrated Makefile.am. This may
  require changes to the doc build system (not in all cases, but it needs
  to be checked).

- overall improved documentation via a large set of topic updates.

- 2026-02-12: runtime: iterate ptcp addresses and validate bind device
  Some connect failures were caused by stopping after the first resolved
  address and by repeating unsupported SO_BINDTODEVICE handling per address.
  This made retries less robust and error reporting less clear.
  Ptcp connect now tries all resolved addresses and fails fast with a
  specific unsupported-value error when a bind device is configured on
  platforms without SO_BINDTODEVICE.
  closes https://github.com/rsyslog/rsyslog/pull/5305
- 2026-02-08: CI: added test for VictoriaLogs via omhttp
  This also verifies that current rsyslog can actually push to
  VictoriaLogs via their native interface. The new test also sets
  stage for upcoming enhancements and ensure omhttp changes will not
  break the VictoriaLogs functionality.
- 2026-02-08: curl modules: pass long literal to CURLOPT_POST
  Why:
  Debian builds against newer curl headers fail with -Werror because
  CURLOPT_POST requires a long argument and int literals trigger
  attribute warnings.
  Impact:
  Fixes compile failures in omhttp, omelasticsearch, and omclickhouse