@@ -2,9 +2,9 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([rsyslog],[8.2602.0],[rsyslog@lists.adiscon.com])     # UPDATE on release
+AC_INIT([rsyslog],[8.2604.0.daily],[rsyslog@lists.adiscon.com])     # UPDATE on release
 AC_DEFINE(VERSION_YEAR,  26, [year part of real rsyslog version])   # UPDATE on release
-AC_DEFINE(VERSION_MONTH,  2, [month part of real rsyslog version])  # UPDATE on release
+AC_DEFINE(VERSION_MONTH,  4, [month part of real rsyslog version])  # UPDATE on release
 
 AM_INIT_AUTOMAKE([tar-pax subdir-objects])
 
