@@ -229,9 +229,9 @@ rst_epilog = """
 # real values will be generated dynamically from info in the repo. If the
 # user builds the docs from "bare" sources not yet processed
 ###############################################################################
-#version = '8.2512'
-release = '8.2602.0'
-#release = version + ' daily stable'
+version = '8.2604'
+#release = '8.2604.0'
+release = version + ' daily stable'
 
 # For this to be true, it means that we are not attempting to build from
 # a release tarball, as otherwise the values above would have been replaced
