@@ -1,4 +1,7 @@
 --------------------------------------------------------------------------------------
+Scheduled Release 8.2604.0 (aka 2026.04) 2026-04-??
+- 2025-02-18: doc: add support for optionally using Google Analytics
+--------------------------------------------------------------------------------------
 Scheduled Release 8.2602.0 (aka 2026.02) 2026-02-17
 - NEW DEPENDENCES: names vary by distribution
   - libyaml-dev
